[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/button_pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://Menus/button_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://Menus/menubuttonfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menus/button_focus_and_selected.tres" type="StyleBox" id=5]
[ext_resource path="res://imported_assets/misc/icons8-pause-button-100.png" type="Texture" id=6]
[ext_resource path="res://Autoload/SceneManager.tscn" type="PackedScene" id=7]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 656.0
margin_top = 420.0
margin_right = 1264.0
margin_bottom = 660.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 608.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 4 )
text = "Paused"
align = 1
valign = 1

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 608.0
margin_bottom = 118.0
focus_neighbour_top = NodePath("../QuitBtn")
focus_neighbour_bottom = NodePath("../BackBtn")
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.898039, 0.890196, 0.0745098, 1 )
custom_colors/font_color = Color( 0.878431, 0.658824, 0.968627, 1 )
custom_colors/font_color_hover = Color( 0.898039, 0.890196, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0.164706, 0.12549, 0.819608, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Resume"

[node name="BackBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 608.0
margin_bottom = 179.0
focus_neighbour_top = NodePath("../ResumeBtn")
focus_neighbour_bottom = NodePath("../QuitBtn")
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.898039, 0.890196, 0.0745098, 1 )
custom_colors/font_color = Color( 0.878431, 0.658824, 0.968627, 1 )
custom_colors/font_color_hover = Color( 0.898039, 0.890196, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0.164706, 0.12549, 0.819608, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Back to Computer"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 608.0
margin_bottom = 240.0
focus_neighbour_top = NodePath("../BackBtn")
focus_neighbour_bottom = NodePath("../ResumeBtn")
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.898039, 0.890196, 0.0745098, 1 )
custom_colors/font_color = Color( 0.878431, 0.658824, 0.968627, 1 )
custom_colors/font_color_hover = Color( 0.898039, 0.890196, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0.164706, 0.12549, 0.819608, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Quit"

[node name="PauseIcon" type="Sprite" parent="."]
position = Vector2( 1860, 100 )
texture = ExtResource( 6 )

[node name="SceneManager" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
